--- a/css/style.css
+++ b/css/style.css
@@ -1,103 +1,84 @@
 * {
-   font-family: 'Geist', sans-serif;
-    text-decoration: none;
     box-sizing: border-box;
 }
-
 body {
-    margin: 0;
     background: #e9b59f;
     color: #fff;
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding-top: 20%;
+    flex-direction: column;
+    height: 100vh;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    margin: 0;
 }
+
+@keyframes width {
+    0%   { transform: scale(1); }
+    45%  { transform: scale(3); }
+    55%  { transform: scale(3); }
+    100% { transform: scale(1); }
+}
+
+@keyframes height {
+    0%   { visibility: visible; }
+    40%  { visibility: hidden; }
+}
+
+.shape{
+    border-radius: 15px;
+    width: 50px;
+    height: 70px;
+}
+
 
 
 .animation {
     display: flex;
     flex-direction: row;
     justify-content: center;
+    gap: 11px;
+    height: 100%;
+}
+.fast {
+    align-items: flex-start;
+}
+
+.fast .shape {
+    animation: width 5s linear infinite;
+    transform-origin: top center;
+}
+
+.long {
+    align-items: center;
+}
+.long .shape {
+    animation: width 10s linear infinite;
+    transform-origin: center;
+}
+
+.medium {
+    align-items: flex-end;
+}
+.medium .shape {
+    animation: width 7.5s linear infinite;
+    transform-origin: bottom center;
+}
+
+
+
+.animation2 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
     gap: 10px;
 }
 
-@keyframes width {
-    0%{
-        width: 10px;
-        height: 10px;
-    }
-    10%{
-        width: 50px;
-        height: 50px;
-    }
-    15%{
-        width: 50px;
-        height: 50px;
-    }
-    25%{
-        width: 100px;
-        height: 100px;
-    }
-    30%{
-        width: 100px;
-        height: 100px;
-    }
-    40%{
-        width: 150px;
-        height: 150px;
-    }
-    60%{
-        width: 150px;
-        height: 150px;
-    }
-    70%{
-        width: 100px;
-        height: 100px;
-    }
-    75%{
-        width: 100px;
-        height: 100px;
-    }
-    85%{
-        width: 50px;
-        height: 50px;
-    }
-    90%{
-        width: 50px;
-        height: 50px;
-    }
-    100%{
-        width: 10px;
-        height: 10px;
-    }
-}
-
-
-div .shape {
+.animation2 .shape {
     border-radius: 15px;
-    animation: width 10s ease infinite;
-}
-
-.red{
-    background: #ff0000;
-}
-
-.yellow {
-    background: yellow;
-}
-.green {
-    background: green;
-}
-.blue {
-    background: aqua;
-}
-.orange {
-    background: orange;
-}
-.dark-blue{
-    background: blue;
-}
-.violet {
-    background: violet;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    visibility: hidden;
+    flex: none;
+    animation: height 10s infinite;
 }
